Language switcher z-index fix [deliver #97606758]

--- a/app/stylesheets/desktop/less/custom/select2.less
+++ b/app/stylesheets/desktop/less/custom/select2.less
@@ -1,6 +1,7 @@
 .select2-container {
   font-family: @font-family-base;
   font-size: 16px;
+  z-index: @zindex-small-popup;
 
   .select2-selection--single {
     height: 40px;
